--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/react": "^18.3.3",
+    "eslint-config-react-app": "^7.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
@@ -18,13 +19,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "browserslist": {
     "production": [
@@ -43,9 +40,9 @@
     "@eslint/js": "^9.4.0",
     "@types/node": "^20.14.2",
     "@types/react-dom": "^18.3.0",
-    "eslint": "^9.4.0",
-    "eslint-plugin-react": "^7.34.2",
+    "gh-pages": "^6.1.1",
     "globals": "^15.4.0",
     "typescript-eslint": "^7.13.0"
-  }
+  },
+  "homepage": "https://UupDownPark.github.io"
 }
