--- a/package.json
+++ b/package.json
@@ -40,8 +40,11 @@
     "@eslint/js": "^9.4.0",
     "@types/node": "^20.14.2",
     "@types/react-dom": "^18.3.0",
+    "autoprefixer": "^10.4.19",
     "gh-pages": "^6.1.1",
     "globals": "^15.4.0",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.4",
     "typescript-eslint": "^7.13.0"
   },
   "homepage": "https://UupDownPark.github.io"
